Implemented logic in ProjectilePool for animating and drawing projectiles. ProjectilePool draw method in called in Spaceship draw method, maybe in the future this will change so that Projectiles spawn logic communicates with spaceship through some sort of abstraction.