@@ -1,3 +1,3 @@
 #!/bin/bash
 
-java -Djava.library.path=./lib --enable-preview -cp target/classes org.taulin.Main
+java -Djava.library.path=./lib --enable-preview --enable-native-access=ALL-UNNAMED -cp target/classes org.taulin.NCursesPanamaDemoApp
